[package]
name = "glfn"
version = "0.0.2"
authors = ["viri <hi@viri.moe>"]
edition = "2021"
rust-version = "1.57"
description = "it loads"
documentation = "https://docs.rs/glfn"
#readme = "" <- needs to be .md, for crates.io
#homepage = ""
repository = "https://github.com/viriuwu/glfn"
license = "Zlib"
keywords = ["gamedev", "gl", "gles", "opengl", "vulkan"]
categories = [
    "external-ffi-bindings",
    "game-development",
    "graphics",
    "no-std",
    "rendering::graphics-api",
]
include = [
    "!/deps",
    "/deps/OpenGL-Registry/xml/gl.xml",
    "/deps/OpenGL-Registry/xml/glx.xml",
    "/deps/OpenGL-Registry/xml/wgl.xml",
    "/deps/Vulkan-Headers/registry/vk.xml",
    "/src",
]

[dependencies]
